--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,16 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.10.10</version>
 		</dependency>
+		<dependency>
+			<groupId>com.redislabs</groupId>
+			<artifactId>spring-redisearch</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.redislabs</groupId>
+			<artifactId>jredisearch</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
