--- a/pom.xml
+++ b/pom.xml
@@ -58,13 +58,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.redislabs</groupId>
-			<artifactId>spring-redisearch</artifactId>
-			<version>3.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.redislabs</groupId>
-			<artifactId>jredisearch</artifactId>
-			<version>2.0.0</version>
+			<artifactId>spring-redis-modules</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 	</dependencies>
 
